fixed horizontal bleed for mobile and safari

--- a/css/base.css
+++ b/css/base.css
@@ -69,6 +69,10 @@ body {
   font-family: var(--regular);
   background-color: var(--background);
   color: var(--white);
+}
+
+main {
+  position: relative;
   overflow-x: hidden;
 }
 
