--- a/css/navigation.css
+++ b/css/navigation.css
@@ -13,11 +13,23 @@ nav {
   vertical-align: middle;
 }
 
+/* Progress bar */
+
+div.progress {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 0.125rem;
+  background-color: var(--green);
+}
+
 .shorter-nav {
   height: 50px;
 }
+
 nav.scroll {
-  background-color: var(--black);
+  background-color: var(--background);
 }
 
 nav a {
